--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ lib_deps_external =
   Adafruit BME280 Library@1.0.7
   Adafruit BME680 Library@1.0.5
   Adafruit NeoPixel@1.1.6
+   DHT sensor library@1.3.0
 
 [env:espresso_lite_v2]
 platform = espressif8266
@@ -27,6 +28,7 @@ lib_ldf_mode = 2
 lib_deps = 
     ${common_env_data.lib_deps_external}
     ESP8266_SSD1306
+    
 
 [platformio] 
 ; src_dir = examples/base
